# Rust-mol-viewer

./: .gitignore  ANIMATION_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  FASE4_OPTIMIZACIONES.md  FORMATOS_ANIMACION.md  GPU_BALL_STICK.md  GPU_COMPUTE_ACTIVADO.md  QUICKSTART.md  README.md  SESSION_STATUS.md  SURFACE_NORMALS_FIX.md  SURFACE_TRANSPARENCY_FIX.md  TEST_SURFACE.md
assets/shaders/: billboard.wgsl  controller_sphere.wgsl  culling.wgsl  cylinder_culling.wgsl  ribbon.wgsl  sphere.wgsl  sphere_indirect.wgsl  surface.wgsl  surface_sdf.wgsl  ui_quad.wgsl
crates/mol-app/: Cargo.toml
crates/mol-app/src/: live_source.rs  main.rs
crates/mol-core/: Cargo.toml
crates/mol-core/src/: lib.rs
crates/mol-render/: Cargo.toml
crates/mol-render/src/: benchmark.rs  camera.rs  culling.rs  fps_counter.rs  geometry.rs  lib.rs  lod.rs  marching_cubes.rs  renderer.rs  splines.rs  vr_renderer.rs
crates/mol-render/src/representations/: ball_stick.rs  billboards.rs  mod.rs  ribbon.rs  spheres.rs  surface.rs
crates/mol-ui/: Cargo.toml
crates/mol-ui/src/: lib.rs  panels.rs
crates/mol-vr/: Cargo.toml
crates/mol-vr/src/: input.rs  lib.rs  performance.rs  picking.rs  session.rs  ui_interaction.rs  ui_panel.rs
crates/pdb-parser/: Cargo.toml
crates/pdb-parser/src/: bonds.rs  dcd.rs  lib.rs  parser.rs  spatial.rs  structures.rs
docs/: VR_ARCHITECTURE.md  VR_USAGE.md
scripts/: create_membrane.py  openmm_mdss.py
